--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      DATABASE_URL: postgresql://root@db:5432/be_uas_ss
+      DATABASE_URL: postgresql://fatlem:fatlem224@db:5432/be_uas_ss
       NODE_ENV: development
     volumes:
       - .:/usr/src/app
