--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   db:
     image: postgres:15
-    container_name: be_uas_ss
+    container_name: be_uas
     ports:
       - "5432:5432"
     environment:
